tests/ast_interpreter/err_list_mutation_negative_index.expected
<string>:3:5: error: index cannot be negative
    list[-1] = 99;
    ^^^^^^^^
