tests/ast_interpreter/err_list_mutation_negative_index.nx
fun main() {
    var list = [1, 2, 3];
    list[-1] = 99;
}